--- a/templates/Home.html
+++ b/templates/Home.html
@@ -81,21 +81,29 @@
         <div class="btn-list">
           <a onclick="callWs()" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-1">Inspire Me!</a>
           <div>
-            <p>Length: 
-              <span name="length" id="length">
-              </span>
+            <p class="tooltip">Length: 
+              <span class="tooltiptext">Max number of tokens to generate. One token is roughly 4 characters</span>
+              <span name="length" id="length"></span>
             </p>
             <input type="range" min="10" max="50" value="20" step="10" class="sliderl" id="RangeLength">  
           </div>
           <br>
-          <div>
-            <p>Temperature: 
-              <span name="temp" id="temp">
-              </span>
+          <div class="slidert">
+            <p class="tooltip">Temperature: 
+              <span class="tooltiptext">Controls randomness. As the temperature approaches zero, the model will become deterministic and repetitive.</span>
+              <span name="temp" id="temp"></span>
             </p>
-            <input type="range" min="0.0" max="1.0" value="0.7" step="0.1" class="slidert" id="RangeTemp">
-            
+            <input type="range" min="0.0" max="1.0" value="0.7" step="0.1" class="slidert" id="RangeTemp" onchange="showValue(this)">
           </div>
+          <script>
+            var slidert = document.getElementById("RangeTemp");
+            var output = document.getElementById("temp");
+            output.innerHTML = slidert.value;
+            
+            slidert.oninput = function() {
+              output.innerHTML = this.value;
+            }
+          </script>
           <a onclick="">🗣</a>
           <!-- <a onclick="printDiv('pdf')" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-2">PRINT MY STORY</a>
           <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a> -->
@@ -115,10 +123,14 @@
         <!-- </div> -->
         <div>
           <div class="u-repeater u-repeater-1">
-            <a onclick="appPredict()" id="result_json" class="u-btn u-btn-round" style="min-width: 100% !important;">Need inspiration 🤔 click on Inspire Me!</a>
+            <div>
+              <p id="result_json" class="result_json">Need inspiration 🤔 click on Inspire Me!</p>
+              <!-- New function Copy Jan 12-->
+              <button class="js-copytextbtn" value="Add to your story"> 
+            </div>
             <div id="pdf" class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
               <div rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
-                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Once upon a time, </textarea>
+                <textarea contenteditable="True" id="text-val" class="u-text u-text-grey-40 u-text-2" rows="10" style="min-width: 100% !important;">Once upon a time, </textarea>
               </div>
             </div>
             <div class="btn-list">
@@ -210,10 +222,11 @@
 	// The Endpoint URL
 	// Google API Created on Jan 6 : https://gpt2c-56chpffh5q-uc.a.run.app/
   // Previous API : https://bts-api-56chpffh5q-uc.a.run.app
+  // API build on Jan 8 11 AM
   var prompt = document.getElementById('text-val').value;
   var length = document.getElementById('RangeLength').value;
   var temp = document.getElementById('RangeTemp').value;
-  let url = `https://gpt2c-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=${length}&nsamples=1&temperature=${temp}`;
+  let url = `https://gpt2d-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=${length}&nsamples=1&temperature=${temp}`;
 
 	fetch(url)
   .then(response => response.json())
@@ -224,10 +237,36 @@
 }
     </script>
     <script>
+      // Modification pour la copie function
+      (function(){
+        let button = document.querySelector('.js-copytextbtn');
+
+        button.addEventListener('click', ()=> {
+          let text = document.querySelector('.result_json');
+          let range = document.createRange();
+
+          range.selectNode(text);
+          window.getSelection().addRange(range);
+
+          if (document.execCommand('copy')) {
+            alert('Le texte a ete copie');
+          }
+        })
+
+
+      })();
+
+      // } var h = document.getElementById("text-val");
+      //   var s = document.getElementById("result_json").innerText;
+      //   h.insertAdjacentText("beforeend", s);
+      // }
+    </script>
+    <script>
         callLongBTS = function(){
 	// Google API
   var prompt = document.getElementById('text-val').value;
   // var length = document.getElementById('RangeLength').value;
+  // Calling the new API built on Jan 8 11 AM
   let url = `https://gpt2c-56chpffh5q-uc.a.run.app/generate?prompt=${prompt}&length=200&nsamples=1&temperature=0.7`;
 
 	fetch(url)
@@ -239,17 +278,6 @@
 }  
     </script>
     <script>
-
-var slidert = document.getElementById("RangeTemp");
-var output = document.getElementById("temp");
-output.innerHTML = slidert.value;
-
-slidert.oninput = function() {
-  output.innerHTML = this.value;
-}
-
-    </script>
-    <script>
 var sliderl = document.getElementById("RangeLength");
 var output = document.getElementById("length");
 output.innerHTML = sliderl.value;
@@ -257,15 +285,6 @@ output.innerHTML = sliderl.value;
 sliderl.oninput = function() {
   output.innerHTML = this.value;
 }
-    </script>
-    <script>
-
-function appPredict() {
-  var h = document.getElementById("text-val");
-  var s = document.getElementById("result_json").innerText;
-  h.insertAdjacentText("beforeend", s);
-}
-
     </script>
   </body>
 </html>
