--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nicepage.css')}}" media="screen">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Home.css')}}" media="screen">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}" media="screen">
     <meta name="generator" content="Nicepage 4.2.6, nicepage.com">
     <meta property="og:title" content="BTS Co pilot">
     <meta property="og:description" content="Best place to generate Bed Tiem Stories">
@@ -17,6 +18,8 @@
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='js/jquery.js')}}" defer=""></script>
     <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='js/nicepage.js')}}" defer=""></script>
+    <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='js/script.js')}}" defer=""></script>
+    <script class="u-script" type="text/javascript" src="{{ url_for('static', filename='js/main.js')}}" defer=""></script>
     <script type="application/ld+json">{
       "@context": "http://schema.org",
       "@type": "Organization",
@@ -81,11 +84,29 @@
           <a onclick="saveDiv('pdf', 'Title')"  class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color u-btn-3">DOWNLOAD BTS</a>
         </div>
         <div>
-          <div class="u-repeater u-repeater-1">
-              <a id="result_json" class="u-btn u-btn-round" style="min-width: 100% !important;">Need inspiration 🤔 click on Inspire Me!</a>
-            <div id="pdf" class="u-container-style u-custom-item u-list-item u-repeater-item u-shape-rectangle">
+          <div>
+            <span id="result_json" class="u-btn-pred u-btn-round" >Need inspiration 🤔 click on Inspire Me!</span>
+            <input class="u-btn u-btn-round" type="submit" value="Add to your story" onClick="appPredict()">  
+          </div>
               <div rows=4 class="u-container-layout u-similar-container u-valign-top-lg u-valign-top-md u-valign-top-sm u-container-layout-1">
-                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;">Once upon a time...</textarea>
+                <textarea id="text-val" class="u-text u-text-grey-40 u-text-2" rows="5" style="min-width: 100% !important;" placeholder="Once upon a time..."></textarea>
+                <div class="app"> 
+                  <div class="input-single">
+                      <!-- <textarea id="note-textarea" placeholder="Create a new story by typing or using voice recognition button below" rows="10"></textarea> -->
+                  </div class="btn-list">         
+                  <button id="start-record-btn" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color " title="Start Recording">▶️ 🗣</button>
+                  <button id="pause-record-btn" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color " title="Pause Recording">⏸ 🗣</button>
+                  <button id="save-note-btn" class="u-btn u-btn-round u-button-style u-gradient u-none u-radius-4 u-text-body-alt-color " title="Save Note">Save BTS</button>   
+                  <p id="recording-instructions">Press the <strong>▶️ 🗣</strong> button and allow access.</p>
+                  
+                  <h3>My Bed Time Stories</h3>
+                  <ul id="notes">
+                      <li>
+                          <p class="no-notes">You don't have any BTS.</p>
+                      </li>
+                  </ul>
+      
+              </div>
               </div>
             </div>
           </div>
@@ -93,6 +114,19 @@
       </div>
     </section>
 
+    <section>
+      <div class="container">
+        <h3 class="no-browser-support">Sorry, Your Browser Doesn't Support the Web Speech API. Try Opening This App in Google Chrome.</h3>
+
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script>
+
+    </section>
+
+      </body>
     <section class="u-clearfix u-section-2" id="sec-e56b">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
@@ -193,8 +227,13 @@
 }
     </script>
     <script>
-    var html = '<button id="result_json">Submit</button>';
-    document.getElementById('text_val').insertAdjacentHTML('afterend', html);
+ 
+function appPredict() {
+        var h = document.getElementById("text-val");
+        var s = document.getElementById("result_json").innerText;
+        h.insertAdjacentText("beforeend", s);
+      }
+
     </script>
   </body>
 </html>
